Fully tested run

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -409,25 +409,25 @@
      "text": [
       "Train on 1675 samples, validate on 216 samples\n",
       "Epoch 1/10\n",
-      "1675/1675 [==============================] - 18s - loss: 7.0606 - acc: 0.4406 - val_loss: 3.4446 - val_acc: 0.7176\n",
+      "1675/1675 [==============================] - 18s - loss: 6.2914 - acc: 0.4764 - val_loss: 3.3246 - val_acc: 0.7361\n",
       "Epoch 2/10\n",
-      "1675/1675 [==============================] - 18s - loss: 3.8867 - acc: 0.6854 - val_loss: 2.7050 - val_acc: 0.7685\n",
+      "1675/1675 [==============================] - 18s - loss: 3.4602 - acc: 0.7069 - val_loss: 1.6048 - val_acc: 0.8056\n",
       "Epoch 3/10\n",
-      "1675/1675 [==============================] - 19s - loss: 2.3886 - acc: 0.7630 - val_loss: 1.4027 - val_acc: 0.8194\n",
+      "1675/1675 [==============================] - 18s - loss: 1.6210 - acc: 0.7749 - val_loss: 0.7899 - val_acc: 0.8148\n",
       "Epoch 4/10\n",
-      "1675/1675 [==============================] - 19s - loss: 1.1097 - acc: 0.8287 - val_loss: 0.7069 - val_acc: 0.8380\n",
+      "1675/1675 [==============================] - 18s - loss: 0.7407 - acc: 0.8131 - val_loss: 0.8032 - val_acc: 0.8519\n",
       "Epoch 5/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.6473 - acc: 0.8513 - val_loss: 0.5164 - val_acc: 0.8611\n",
+      "1675/1675 [==============================] - 18s - loss: 0.5402 - acc: 0.8693 - val_loss: 0.5934 - val_acc: 0.8565\n",
       "Epoch 6/10\n",
-      "1675/1675 [==============================] - 17s - loss: 0.4206 - acc: 0.8782 - val_loss: 0.4254 - val_acc: 0.9074\n",
+      "1675/1675 [==============================] - 18s - loss: 0.4234 - acc: 0.8878 - val_loss: 0.5417 - val_acc: 0.8750\n",
       "Epoch 7/10\n",
-      "1675/1675 [==============================] - 17s - loss: 0.3812 - acc: 0.8979 - val_loss: 0.5704 - val_acc: 0.8981\n",
+      "1675/1675 [==============================] - 18s - loss: 0.3199 - acc: 0.9182 - val_loss: 0.4319 - val_acc: 0.9074\n",
       "Epoch 8/10\n",
-      "1675/1675 [==============================] - 17s - loss: 0.2989 - acc: 0.9188 - val_loss: 0.4088 - val_acc: 0.9167\n",
+      "1675/1675 [==============================] - 18s - loss: 0.2953 - acc: 0.9146 - val_loss: 0.4556 - val_acc: 0.9074\n",
       "Epoch 9/10\n",
-      "1675/1675 [==============================] - 17s - loss: 0.2523 - acc: 0.9313 - val_loss: 0.5225 - val_acc: 0.8981\n",
+      "1675/1675 [==============================] - 18s - loss: 0.2500 - acc: 0.9361 - val_loss: 0.4742 - val_acc: 0.8981\n",
       "Epoch 10/10\n",
-      "1675/1675 [==============================] - 17s - loss: 0.1883 - acc: 0.9481 - val_loss: 0.5593 - val_acc: 0.9120\n"
+      "1675/1675 [==============================] - 18s - loss: 0.2042 - acc: 0.9361 - val_loss: 0.5804 - val_acc: 0.8981\n"
      ]
     }
    ],
@@ -440,6 +440,13 @@
    "metadata": {},
    "source": [
     "####  The fully-connected model achieves ~ 90% validation accuracy!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Next up, testing this model on the images set aside in the test directory (coming soon) ..."
    ]
   }
  ],
