Fixed markdown comment

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform each image to a common shape; place in train or validate folder"
+    "### Transform each image to a common shape; place in train, validate, or test folder"
    ]
   },
   {
