--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -310,25 +310,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating training bottleneck predictions:\n",
+      "Generating \"train\" bottleneck predictions:\n",
       "\tBatch 27, shape (11, 8, 8, 2048)\n",
-      "\tFeature weights saved to bn_training.npy\n",
+      "\tFeature weights, shape (1675, 8, 8, 2048), saved to bn_train.npy\n",
       "\n",
-      "Generating validation bottleneck predictions:\n",
+      "Generating \"validate\" bottleneck predictions:\n",
       "\tBatch 4, shape (24, 8, 8, 2048)\n",
-      "\tFeature weights saved to bn_validation.npy\n",
+      "\tFeature weights, shape (216, 8, 8, 2048), saved to bn_validate.npy\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "target_dirs = {target: os.path.join(out_dir, target) for target in ['train', 'validate', 'test']}\n",
     "bn_features = dict()\n",
-    "predict_task = [('training', target_dirs['train']), ('validation', target_dirs['validate'])]\n",
-    "for task, image_dir in predict_task:\n",
-    "    print(f'Generating {task} bottleneck predictions:')\n",
+    "for task in ['train', 'validate']:\n",
+    "    print(f'Generating \"{task}\" bottleneck predictions:')\n",
     "    pred_batches = []\n",
-    "    for n, X in enumerate(image_generator(image_dir, batch_size=64)):\n",
+    "    for n, X in enumerate(image_generator(target_dirs[task], batch_size=64)):\n",
     "        pred = model.predict_on_batch(X)\n",
     "        pred_batches.append(pred)\n",
     "        print(f'\\tBatch {n+1}, shape {pred.shape}', end='\\r')\n",
@@ -337,7 +335,7 @@
     "    bn_features[task] = np.concatenate(pred_batches)\n",
     "    filename = 'bn_' + task + '.npy'\n",
     "    with open(filename, 'wb') as f:\n",
-    "        print(f'\\n\\tFeature weights saved to {filename}\\n')\n",
+    "        print(f'\\n\\tFeature weights, shape {bn_features[task].shape}, saved to {filename}\\n')\n",
     "        np.save(f, bn_features[task])"
    ]
   },
@@ -345,62 +343,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a new fully-connected model, using bottleneck features as input"
+    "# Train a fully-connected model using bottleneck features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert class label vectors to categorical one-hot arrays\n",
-    "num_classes = len(np.unique(labels['train']))\n",
-    "Y_train = to_categorical(labels['train'], num_classes)\n",
-    "Y_valid = to_categorical(labels['validate'], num_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_top_model():\n",
-    "\n",
-    "    with open('bn_training.npy', 'rb') as f:\n",
-    "        train_data = np.load(f)\n",
-    "    train_labels = Y_train\n",
-    "\n",
-    "    with open('bn_validation.npy', 'rb') as f:\n",
-    "        validation_data = np.load(f)\n",
-    "    validation_labels = Y_valid\n",
-    "\n",
-    "    model = Sequential()\n",
-    "    model.add(Flatten(input_shape=train_data.shape[1:]))\n",
-    "    model.add(Dense(256, activation='relu'))\n",
-    "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(num_classes, activation='softmax'))\n",
-    "\n",
-    "    model.compile(optimizer='adam',\n",
-    "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
-    "\n",
-    "    top_model_weights_path = 'bottleneck_model.h5'\n",
-    "    epochs = 10\n",
-    "    batch_size = 64\n",
-    "\n",
-    "    model.fit(train_data, train_labels,\n",
-    "              epochs=epochs,\n",
-    "              batch_size=batch_size,\n",
-    "              validation_data=(validation_data, validation_labels))\n",
-    "    \n",
-    "    model.save_weights(top_model_weights_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -409,30 +357,51 @@
      "text": [
       "Train on 1675 samples, validate on 216 samples\n",
       "Epoch 1/10\n",
-      "1675/1675 [==============================] - 18s - loss: 6.2914 - acc: 0.4764 - val_loss: 3.3246 - val_acc: 0.7361\n",
+      "17s - loss: 7.0606 - acc: 0.4406 - val_loss: 3.4446 - val_acc: 0.7176\n",
       "Epoch 2/10\n",
-      "1675/1675 [==============================] - 18s - loss: 3.4602 - acc: 0.7069 - val_loss: 1.6048 - val_acc: 0.8056\n",
+      "17s - loss: 3.8867 - acc: 0.6854 - val_loss: 2.7050 - val_acc: 0.7685\n",
       "Epoch 3/10\n",
-      "1675/1675 [==============================] - 18s - loss: 1.6210 - acc: 0.7749 - val_loss: 0.7899 - val_acc: 0.8148\n",
+      "17s - loss: 2.3886 - acc: 0.7630 - val_loss: 1.4027 - val_acc: 0.8194\n",
       "Epoch 4/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.7407 - acc: 0.8131 - val_loss: 0.8032 - val_acc: 0.8519\n",
+      "16s - loss: 1.1102 - acc: 0.8287 - val_loss: 0.7074 - val_acc: 0.8426\n",
       "Epoch 5/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.5402 - acc: 0.8693 - val_loss: 0.5934 - val_acc: 0.8565\n",
+      "17s - loss: 0.6422 - acc: 0.8531 - val_loss: 0.5172 - val_acc: 0.8704\n",
       "Epoch 6/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.4234 - acc: 0.8878 - val_loss: 0.5417 - val_acc: 0.8750\n",
+      "17s - loss: 0.4154 - acc: 0.8812 - val_loss: 0.4317 - val_acc: 0.9028\n",
       "Epoch 7/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.3199 - acc: 0.9182 - val_loss: 0.4319 - val_acc: 0.9074\n",
+      "17s - loss: 0.3655 - acc: 0.9039 - val_loss: 0.4419 - val_acc: 0.9213\n",
       "Epoch 8/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.2953 - acc: 0.9146 - val_loss: 0.4556 - val_acc: 0.9074\n",
+      "16s - loss: 0.2635 - acc: 0.9278 - val_loss: 0.4228 - val_acc: 0.9120\n",
       "Epoch 9/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.2500 - acc: 0.9361 - val_loss: 0.4742 - val_acc: 0.8981\n",
+      "17s - loss: 0.1978 - acc: 0.9421 - val_loss: 0.4969 - val_acc: 0.9028\n",
       "Epoch 10/10\n",
-      "1675/1675 [==============================] - 18s - loss: 0.2042 - acc: 0.9361 - val_loss: 0.5804 - val_acc: 0.8981\n"
+      "17s - loss: 0.2031 - acc: 0.9415 - val_loss: 0.5811 - val_acc: 0.9120\n"
      ]
     }
    ],
    "source": [
-    "train_top_model()"
+    "# Use bottleneck features as fully-connected model input data\n",
+    "X_train = bn_features['train']\n",
+    "X_validate = bn_features['validate']\n",
+    "\n",
+    "# Convert class label vectors to categorical one-hot arrays\n",
+    "num_classes = len(np.unique(labels['train']))\n",
+    "Y_train = to_categorical(labels['train'], num_classes)\n",
+    "Y_validate = to_categorical(labels['validate'], num_classes)\n",
+    "\n",
+    "# Build, compile, and fit the model\n",
+    "model = Sequential()\n",
+    "model.add(Flatten(input_shape=X_train.shape[1:]))\n",
+    "model.add(Dense(256, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(X_train, Y_train, batch_size=64, epochs=10, verbose=2, validation_data=(X_validate, Y_validate))\n",
+    "\n",
+    "# Save model weights for future use\n",
+    "model.save_weights('bottleneck_model.h5')"
    ]
   },
   {
@@ -446,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Next up, testing this model on the images set aside in the test directory (coming soon) ..."
+    "### Up next, testing this model on the images set aside in the test directory (coming soon) ..."
    ]
   }
  ],
