Created new extract/build functins

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -26,7 +26,9 @@
     "from keras import applications\n",
     "from keras.utils import to_categorical\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dropout, Flatten, Dense"
+    "from keras.layers import Dropout, Flatten, Dense\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
@@ -59,6 +61,8 @@
     "with suppress(FileExistsError):\n",
     "    os.mkdir('data')\n",
     "source_dir = os.path.join('data', 'UCMerced_LandUse', 'Images')\n",
+    "\n",
+    "# Download the zipped dataset from http://vision.ucmerced.edu/datasets/landuse.html \n",
     "if not os.path.isdir(source_dir):\n",
     "    with ZipFile('UCMerced_LandUse.zip') as z:\n",
     "        z.extractall(path='data')"
@@ -69,6 +73,13 @@
    "metadata": {},
    "source": [
     "#### NOTE:  I discovered that not all images files are 256x256 pixels as claimed at the UC Merced Land Use Dataset site. To work with the Keras models, all images must have the same dimensions, so I resize them to a common shape below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper functions"
    ]
   },
   {
@@ -102,8 +113,8 @@
    "source": [
     "def class_name_from_path(filepath):\n",
     "    \"\"\"\n",
-    "    Helper function to extract and return an image's class name\n",
-    "    from the name of the directory in which the image is stored.\n",
+    "    Extract and return an image's class name from the name\n",
+    "    of the directory in which the image is stored.\n",
     "    \"\"\"\n",
     "    head, _ = os.path.split(filepath)\n",
     "    _, class_name = os.path.split(head)\n",
@@ -118,7 +129,7 @@
    "source": [
     "def choose_target():\n",
     "    \"\"\"\n",
-    "    Helper function to randomize splits between train/validate/test directories.\n",
+    "    Randomize splits between train, validate, and test directories.\n",
     "    \"\"\"\n",
     "    # Use an 80% training data split\n",
     "    train_split = 0.8\n",
@@ -135,6 +146,9 @@
    "outputs": [],
    "source": [
     "def make_image_filename(image_num, class_num):\n",
+    "    \"\"\"\n",
+    "    Return a TIF file name string in the format <image_num>_<class_num>.tif\n",
+    "    \"\"\"\n",
     "    return str(image_num).zfill(4) + '_' + str(class_num).zfill(2) + '.tif'"
    ]
   },
@@ -145,8 +159,35 @@
    "outputs": [],
    "source": [
     "def classnum_from_filename(filename):\n",
-    "    # Extract class number from last 2 characters before filename extension\n",
+    "    \"\"\"\n",
+    "    Extract and return the int class number from an image filename\n",
+    "    formatted by make_image_filename().\n",
+    "    \"\"\"\n",
     "    return int(filename.split('.')[0][-2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_generator(image_dir, batch_size=64):\n",
+    "    \"\"\"\n",
+    "    Generate a stream of min-max scaled images from image_dir,\n",
+    "    returned as numpy.array of sample size batch_size. \n",
+    "    \"\"\"\n",
+    "    images = []\n",
+    "    for filename in os.listdir(image_dir):\n",
+    "        image = imread(os.path.join(image_dir, filename))\n",
+    "        # Min-Max scale the image to range 0.0 - 1.0\n",
+    "        images.append(image/255.0)\n",
+    "        if len(images) == batch_size:\n",
+    "            X = np.array(images)\n",
+    "            images = []\n",
+    "            yield X\n",
+    "    if images:\n",
+    "        yield np.array(images)"
    ]
   },
   {
@@ -158,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +213,8 @@
     "                 test/\n",
     "                       ...\n",
     "\"\"\"\n",
-    "out_dir = os.path.join('data', 'transformed')\n",
-    "target_dirs = {target: os.path.join(out_dir, target) for target in ['train', 'validate', 'test']}"
+    "target_base = os.path.join('data', 'transformed')\n",
+    "target_dirs = {target: os.path.join(target_base, target) for target in ['train', 'validate', 'test']}"
    ]
   },
   {
@@ -185,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = defaultdict(list)\n",
     "\n",
     "# Assume if directory \"transformed\" exists, it contains all the processed images.\n",
-    "if not os.path.isdir(out_dir):\n",
+    "if not os.path.isdir(target_base):\n",
     "    # Make new directories\n",
-    "    os.mkdir(out_dir)\n",
+    "    os.mkdir(target_base)\n",
     "    for target in target_dirs:\n",
     "        os.mkdir(target_dirs[target])\n",
     "    \n",
@@ -268,27 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Pretrained CNN bottleneck feature weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def image_generator(image_dir, batch_size=64):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(image_dir):\n",
-    "        image = imread(os.path.join(image_dir, filename))\n",
-    "        # Min-Max scale the image to range 0.0 - 1.0\n",
-    "        images.append(image/255.0)\n",
-    "        if len(images) == batch_size:\n",
-    "            X = np.array(images)\n",
-    "            images = []\n",
-    "            yield X\n",
-    "    if images:\n",
-    "        yield np.array(images)"
+    "# Get bottleneck features of training dataset from pretrained CNN"
    ]
   },
   {
@@ -297,53 +318,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = applications.VGG16(include_top=False, weights='imagenet')\n",
-    "model = applications.Xception(include_top=False, weights='imagenet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating \"train\" bottleneck predictions:\n",
-      "\tBatch 27, shape (11, 8, 8, 2048)\n",
-      "\tFeature weights, shape (1675, 8, 8, 2048), saved to bn_train.npy\n",
-      "\n",
-      "Generating \"validate\" bottleneck predictions:\n",
-      "\tBatch 4, shape (24, 8, 8, 2048)\n",
-      "\tFeature weights, shape (216, 8, 8, 2048), saved to bn_validate.npy\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "bn_features = dict()\n",
-    "for task in ['train', 'validate']:\n",
-    "    print(f'Generating \"{task}\" bottleneck predictions:')\n",
-    "    pred_batches = []\n",
-    "    for n, X in enumerate(image_generator(target_dirs[task], batch_size=64)):\n",
-    "        pred = model.predict_on_batch(X)\n",
-    "        pred_batches.append(pred)\n",
-    "        print(f'\\tBatch {n+1}, shape {pred.shape}', end='\\r')\n",
-    "\n",
-    "    # Save weights to bn_features dictionary\n",
-    "    bn_features[task] = np.concatenate(pred_batches)\n",
-    "    filename = 'bn_' + task + '.npy'\n",
-    "    with open(filename, 'wb') as f:\n",
-    "        print(f'\\n\\tFeature weights, shape {bn_features[task].shape}, saved to {filename}\\n')\n",
-    "        np.save(f, bn_features[task])"
+    "def extract_bottleneck_features(model, dataset='train', batch_size=64):\n",
+    "    \"\"\"\n",
+    "    Extract botteleneck features for the input dataset (train/validate/test)\n",
+    "    by predicting on the convolutional portion only of a pretrained model.\n",
+    "        \n",
+    "    Inputs:\n",
+    "        model: Pre-trained deep learning model, excluding fully-connected top model\n",
+    "               e.g. applications.VGG16(include_top=False, weights='imagenet')\n",
+    "        dataset = string label for dataset image directory ['train', 'validate', 'test']\n",
+    "    \n",
+    "    Return:\n",
+    "        Return bottleneck features as numpy.array\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    print(f'Generating \"{dataset}\" bottleneck predictions')\n",
+    "    dir_ = target_dirs[dataset]\n",
+    "    pred_batches = [model.predict_on_batch(X) for X in image_generator(dir_, batch_size=batch_size)]\n",
+    "    \n",
+    "    # Concatenate predictions list to numpy.array\n",
+    "    bn_features = np.concatenate(pred_batches)\n",
+    "    print(f'   Features of shape {bn_features.shape} extracted for model {model.name}')\n",
+    "    \n",
+    "    return bn_features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a fully-connected model using bottleneck features"
+    "### Select a pre-trained model from the Kera.applications module; e.g. Xception, VGG16, ..., MobileNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Xception V1 is a smaller-footprint model with high accuracy\n",
+    "pretrained_model = applications.Xception(include_top=False, weights='imagenet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract bottleneck features for each dataset: train, validate, and test"
    ]
   },
   {
@@ -355,67 +376,187 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 1675 samples, validate on 216 samples\n",
-      "Epoch 1/10\n",
-      "17s - loss: 7.0606 - acc: 0.4406 - val_loss: 3.4446 - val_acc: 0.7176\n",
-      "Epoch 2/10\n",
-      "17s - loss: 3.8867 - acc: 0.6854 - val_loss: 2.7050 - val_acc: 0.7685\n",
-      "Epoch 3/10\n",
-      "17s - loss: 2.3886 - acc: 0.7630 - val_loss: 1.4027 - val_acc: 0.8194\n",
-      "Epoch 4/10\n",
-      "16s - loss: 1.1102 - acc: 0.8287 - val_loss: 0.7074 - val_acc: 0.8426\n",
-      "Epoch 5/10\n",
-      "17s - loss: 0.6422 - acc: 0.8531 - val_loss: 0.5172 - val_acc: 0.8704\n",
-      "Epoch 6/10\n",
-      "17s - loss: 0.4154 - acc: 0.8812 - val_loss: 0.4317 - val_acc: 0.9028\n",
-      "Epoch 7/10\n",
-      "17s - loss: 0.3655 - acc: 0.9039 - val_loss: 0.4419 - val_acc: 0.9213\n",
-      "Epoch 8/10\n",
-      "16s - loss: 0.2635 - acc: 0.9278 - val_loss: 0.4228 - val_acc: 0.9120\n",
-      "Epoch 9/10\n",
-      "17s - loss: 0.1978 - acc: 0.9421 - val_loss: 0.4969 - val_acc: 0.9028\n",
-      "Epoch 10/10\n",
-      "17s - loss: 0.2031 - acc: 0.9415 - val_loss: 0.5811 - val_acc: 0.9120\n"
+      "Generating \"train\" bottleneck predictions\n",
+      "   Features of shape (1675, 8, 8, 2048) extracted for model xception\n",
+      "Generating \"validate\" bottleneck predictions\n",
+      "   Features of shape (216, 8, 8, 2048) extracted for model xception\n",
+      "Generating \"test\" bottleneck predictions\n",
+      "   Features of shape (209, 8, 8, 2048) extracted for model xception\n"
      ]
     }
    ],
    "source": [
-    "# Use bottleneck features as fully-connected model input data\n",
-    "X_train = bn_features['train']\n",
-    "X_validate = bn_features['validate']\n",
-    "\n",
-    "# Convert class label vectors to categorical one-hot arrays\n",
     "num_classes = len(np.unique(labels['train']))\n",
-    "Y_train = to_categorical(labels['train'], num_classes)\n",
-    "Y_validate = to_categorical(labels['validate'], num_classes)\n",
-    "\n",
+    "X, Y = dict(), dict()\n",
+    "for dataset in ['train', 'validate', 'test']:\n",
+    "    # Extract bottleneck features from pretrained model, predicting on images from \"dataset\" directory\n",
+    "    X[dataset] = extract_bottleneck_features(pretrained_model, dataset)\n",
+    "    # Convert class label vectors to categorical one-hot arrays\n",
+    "    Y[dataset] = to_categorical(labels[dataset], num_classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a fully-connected model using bottleneck features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_fully_connected(input_shape, num_classes):\n",
+    "    \"\"\"\n",
+    "    Create a fully-connected model to train or test on UC Merced dataset.\n",
+    "    \"\"\"\n",
+    "    model = Sequential()\n",
+    "    model.add(Flatten(input_shape=input_shape))\n",
+    "    model.add(Dense(256, activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(num_classes, activation='softmax'))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 1675 samples, validate on 216 samples\n",
+      "Epoch 1/10\n",
+      "17s - loss: 6.2914 - acc: 0.4764 - val_loss: 3.3246 - val_acc: 0.7361\n",
+      "Epoch 2/10\n",
+      "17s - loss: 3.4602 - acc: 0.7069 - val_loss: 1.6056 - val_acc: 0.8056\n",
+      "Epoch 3/10\n",
+      "17s - loss: 1.6102 - acc: 0.7767 - val_loss: 0.7901 - val_acc: 0.8148\n",
+      "Epoch 4/10\n",
+      "17s - loss: 0.7913 - acc: 0.8066 - val_loss: 0.6921 - val_acc: 0.8657\n",
+      "Epoch 5/10\n",
+      "17s - loss: 0.5441 - acc: 0.8555 - val_loss: 0.5959 - val_acc: 0.8657\n",
+      "Epoch 6/10\n",
+      "17s - loss: 0.4473 - acc: 0.8878 - val_loss: 0.6793 - val_acc: 0.8380\n",
+      "Epoch 7/10\n",
+      "17s - loss: 0.3845 - acc: 0.9045 - val_loss: 0.4596 - val_acc: 0.8796\n",
+      "Epoch 8/10\n",
+      "17s - loss: 0.2460 - acc: 0.9284 - val_loss: 0.4562 - val_acc: 0.8889\n",
+      "Epoch 9/10\n",
+      "17s - loss: 0.2659 - acc: 0.9319 - val_loss: 0.5339 - val_acc: 0.8889\n",
+      "Epoch 10/10\n",
+      "17s - loss: 0.3110 - acc: 0.9260 - val_loss: 0.5375 - val_acc: 0.9074\n"
+     ]
+    }
+   ],
+   "source": [
     "# Build, compile, and fit the model\n",
-    "model = Sequential()\n",
-    "model.add(Flatten(input_shape=X_train.shape[1:]))\n",
-    "model.add(Dense(256, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "model = build_fully_connected(input_shape=X['train'].shape[1:], num_classes=num_classes)\n",
     "\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model.fit(X_train, Y_train, batch_size=64, epochs=10, verbose=2, validation_data=(X_validate, Y_validate))\n",
+    "model.fit(X['train'], Y['train'], batch_size=64, epochs=10,\n",
+    "          verbose=2, validation_data=(X['validate'], Y['validate'])\n",
+    "         )\n",
     "\n",
-    "# Save model weights for future use\n",
-    "model.save_weights('bottleneck_model.h5')"
+    "# Save model weights for test dataset predictions\n",
+    "fit_model_weights = model.get_weights()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  The fully-connected model achieves ~ 90% validation accuracy!"
+    "###  Validation accuracy ~90% !"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Up next, testing this model on the images set aside in the test directory (coming soon) ..."
+    "### Evaluate the model on the test images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start by building the same fully-connected model\n",
+    "model = build_fully_connected(input_shape=X['test'].shape[1:], num_classes=num_classes)\n",
+    "\n",
+    "# Load weights from the model fit on the training data\n",
+    "model.set_weights(fit_model_weights)\n",
+    "\n",
+    "# Predict on the test images\n",
+    "y_pred = model.predict_classes(X['test'], verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print classification results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model predication accuracy: 0.866\n",
+      "\n",
+      "Classification report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.90      0.60      0.72        15\n",
+      "          1       1.00      1.00      1.00         9\n",
+      "          2       1.00      0.75      0.86         8\n",
+      "          3       0.87      0.87      0.87        15\n",
+      "          4       1.00      0.38      0.55         8\n",
+      "          5       1.00      1.00      1.00        11\n",
+      "          6       0.77      1.00      0.87        10\n",
+      "          7       1.00      0.70      0.82        10\n",
+      "          8       0.38      1.00      0.55         3\n",
+      "          9       0.88      1.00      0.93        14\n",
+      "         10       0.36      0.80      0.50         5\n",
+      "         11       1.00      0.88      0.93         8\n",
+      "         12       1.00      0.92      0.96        12\n",
+      "         13       1.00      1.00      1.00        10\n",
+      "         14       1.00      1.00      1.00         7\n",
+      "         15       1.00      0.89      0.94         9\n",
+      "         16       1.00      1.00      1.00        14\n",
+      "         17       0.60      0.60      0.60        10\n",
+      "         18       1.00      0.86      0.92         7\n",
+      "         19       0.92      1.00      0.96        11\n",
+      "         20       0.80      0.92      0.86        13\n",
+      "\n",
+      "avg / total       0.90      0.87      0.87       209\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(labels['test'], y_pred)\n",
+    "print(f'Model predication accuracy: {accuracy:.3f}')\n",
+    "print(f'\\nClassification report:\\n {classification_report(labels[\"test\"], y_pred)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Test accuracy ~87% vs. 90% validation accuracy suggests overfitting in the model and room for improvement. Nonetheless, 87% test accuracy is impressive for a small dataset."
    ]
   }
  ],
