Changed section text

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get bottleneck features of training dataset from pretrained CNN"
+    "# Get training set bottleneck features from pretrained CNN"
    ]
   },
   {
