Changed section text

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select a pre-trained model from the Kera.applications module; e.g. Xception, VGG16, ..., MobileNet"
+    "### Select a pre-trained model from the Keras.applications module; e.g. Xception, VGG16 ..."
    ]
   },
   {
