warning suppression comment cleanup

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -135,9 +135,10 @@
     "            class_subdir = os.path.join(target_dir, class_name)\n",
     "            os.mkdir(class_subdir)\n",
     "\n",
-    "    # Copy images from ./data/UCMerced_LandUse/Images to ./data/flow/<train, validate, test> directories\n",
+    "    # suppress low-contrast warning from skimage.io.imsave\n",
+    "    warnings.simplefilter('ignore', UserWarning)\n",
     "    \n",
-    "    warnings.simplefilter('ignore', UserWarning)  # suppress low-contrast warning from skimage.io.imsave\n",
+    "    # Copy images from ./data/UCMerced_LandUse/Images to ./data/flow/<train, validate, test> directories    \n",
     "    for root, _, filenames in os.walk(source_dir):\n",
     "        if filenames:\n",
     "            class_name = os.path.basename(root)\n",
