image copy comment cleanup

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -138,7 +138,7 @@
     "    # suppress low-contrast warning from skimage.io.imsave\n",
     "    warnings.simplefilter('ignore', UserWarning)\n",
     "    \n",
-    "    # Copy images from ./data/UCMerced_LandUse/Images to ./data/flow/<train, validate, test> directories    \n",
+    "    # Copy images from ./data/UCMerced_LandUse/Images to ./data/flow/<train, validate, test>    \n",
     "    for root, _, filenames in os.walk(source_dir):\n",
     "        if filenames:\n",
     "            class_name = os.path.basename(root)\n",
