last comment cleanup

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -576,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  91% Test accuracy vs. ~ 88% validation accuracy. Impressive for such a small image dataset."
+    "###  91% Test vs. ~ 88% validation accuracy. Impressive for such a small image dataset."
    ]
   }
  ],
