--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To avoid overfitting, let's retrain the model, stopping at the epoch with smallest validation loss."
+    "### To avoid overfitting, retrain the model through the epoch with smallest validation loss."
    ]
   },
   {
