--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Transfer Learning for Small Dataset Image Classification\n",
-    "*An image classification project on a the UC Merced Land Use dataset, using a pretrained CNN.*"
+    "*An image classification project on the UC Merced Land Use dataset, using a pretrained CNN.*"
    ]
   },
   {
