--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -658,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Test accuracy: 93.3%. Impressive for such a small image dataset!"
+    "###  Average test accuracy: 93.3%. Impressive for such a small image dataset!"
    ]
   }
  ],
